[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "nbcheck"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
description = "Utility to check the validity of jupyter notebook files"
keywords = ["jupyter", "notebook", "nbformat", "validation", "utility"]
authors = [{ "name" = "furechan", "email" = "furechan@xsmail.com" }]
urls = { "homepage" = "https://github.com/furechan/nbcheck" }
dependencies = ["click", "nbformat"]
optional-dependencies.dev = ["ipykernel"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.scripts]
nbcheck = "nbcheck:main"

[tool.hatch.build]
dev-mode-dirs = ["src"]
sources = ["src"]
include = ["src"]
exclude = [".*"]

[tool.pydev]
allow-publish = true

[tool.pytest.ini_options]
addopts = ["-p no:cacheprovider"]
testpaths = ["tests"]
