[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "nbcheck"
version = "0.0.4"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
description = "Utility to check the validity of jupyter notebook files"
keywords = ["jupyter", "notebook", "nbformat", "validation", "utility"]
authors = [{ "name" = "furechan", "email" = "furechan@xsmail.com" }]
urls = { "homepage" = "https://github.com/furechan/nbcheck" }
dependencies = ["click", "nbformat"]
optional-dependencies.dev = ["ipykernel"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[project.scripts]
nbcheck = "nbcheck:main"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/nbcheck.py"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE.txt"]

[tool.pydev]
allow-publish = true

[tool.pytest.ini_options]
addopts = ["-p no:cacheprovider"]
testpaths = ["tests"]
