[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.0,<0.9.0"]


[project]
name = "nbcheck"
version = "0.0.5"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE.txt"]
description = "Utility to check the validity of jupyter notebook files"
keywords = ["jupyter", "notebook", "nbformat", "validation", "utility"]
authors = [{ "name" = "furechan", "email" = "furechan@xsmail.com" }]
urls = { "homepage" = "https://github.com/furechan/nbcheck" }
dependencies = ["click", "nbformat"]
optional-dependencies.dev = ["ipykernel"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[project.scripts]
nbcheck = "nbcheck:main"

[tool.pydev]
allow-publish = true

[tool.pytest.ini_options]
addopts = ["-p no:cacheprovider"]
testpaths = ["tests"]
